# obd-dashboard

./: README.md
obd-dashboard-next/: DOCUMENTATION.md  README.md  ROADMAP.md  components.json  eslint.config.mjs  jest.config.cjs  jest.config.ts  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json
obd-dashboard-next/scripts/: check-locales.mjs  eslint-with-tailwind-compat.cjs  tailwind-eslint-alias.cjs
obd-dashboard-next/src/app/: DevtoolsPreferencesContext.tsx  LanguageContext.tsx  PowerModeContext.tsx  RefreshRateContext.test.tsx  RefreshRateContext.tsx  (+5 more)
obd-dashboard-python/: .gitignore  README.md  pyproject.toml  requirements.txt  server.py  start-emulator.sh  start-server.sh
obd-dashboard-python/src/obd_dashboard_server/: __init__.py  server.py
obd-dashboard-python/tests/: test_server.py
obd-dashboard-report/: DOCUMENTATION.md  README.md  pyproject.toml
obd-dashboard-report/src/obdtools/: cli.py  dtc_to_text.py
obd-dashboard-report/src/obdtools/analysis/: corr.py  stats.py
obd-dashboard-report/src/obdtools/assets/css/: report.css
obd-dashboard-report/src/obdtools/assets/js/: report.js
obd-dashboard-report/src/obdtools/csvio/: readers.py
obd-dashboard-report/src/obdtools/logger/: cli_adapter.py  core.py  dtc.py  runner.py
obd-dashboard-report/src/obdtools/plotting/: plotly_helpers.py
obd-dashboard-report/src/obdtools/report/: calc_export.py  html_report.py  template_loader.py
obd-dashboard-report/src/obdtools/templates/: obd_quick_charts_template.html
obd-dashboard-report/src/obdtools/utils/: downsample.py  fileio.py  names.py
obd-dashboard-report/tests/: conftest.py  test_calc_export.py  test_cli.py  test_csvio.py  test_html_report.py  test_logger_mocked.py  test_report_template.py  test_utils.py
(+50 files in other folders)
